--- a/clewbayfarmfrontend/package.json
+++ b/clewbayfarmfrontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
