--- a/ClewbayFarmAPI/Properties/launchSettings.json
+++ b/ClewbayFarmAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5127",
+      "applicationUrl": "http://0.0.0.0:5127;http://192.168.0.22:5127",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7237;http://localhost:5127",
+      "applicationUrl": "https://0.0.0.0:7237;https://192.168.0.22:7237",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
